[gd_scene load_steps=4 format=3 uid="uid://dx16l7nlpp8ta"]

[ext_resource type="Texture2D" uid="uid://bht4bh875k1q4" path="res:// help.png" id="1_3m1lw"]
[ext_resource type="Script" uid="uid://brytjtynu4alr" path="res://select.gd" id="1_uyhgf"]
[ext_resource type="FontFile" uid="uid://b6ucicl6gc3s8" path="res://vhs-gothic.ttf" id="2_88nqw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uyhgf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3m1lw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_88nqw")
theme_override_font_sizes/font_size = 150
text = "Select"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_88nqw")
theme_override_font_sizes/font_size = 20
text = "they're all bad"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
alignment = 1

[node name="main" type="Button" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_88nqw")
text = "Parkour Map"

[node name="beta" type="Button" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_88nqw")
text = "Beta Map"

[node name="infinite" type="Button" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_88nqw")
text = "Endless"

[connection signal="pressed" from="VBoxContainer2/main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="VBoxContainer2/beta" to="." method="_on_beta_pressed"]
[connection signal="pressed" from="VBoxContainer2/infinite" to="." method="_on_infinite_pressed"]
